Fix dropdown still clipped: position:relative on card-menu-item + z-index 1000

--- a/turf.ttar974.re/public/css/_card.css
+++ b/turf.ttar974.re/public/css/_card.css
@@ -51,6 +51,7 @@
 }
 
 .card-menu-item {
+    position: relative;
     display: block;
     padding: 0.5rem;
     width: 7rem;
